--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.0",
